# threat-detection-suite

./: .editorconfig  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  SECURITY.md  ThreatDetectionSuite.cpp  ThreatDetectionSuitee.cpp  ThreatDetectionSuitex.cpp  build.bat  build.sh  release_notes.md
.github/workflows/: release.yml  security.yml
NexusEDR/common/: NexusCommon.h
NexusEDR/driver/: NexusEDR.c
NexusEDR/engine/: NexusService.cpp
NexusEDR/engine/collectors/: EtwCollector.cpp
NexusEDR/engine/correlator/: SequenceCorrelator.cpp
NexusEDR/engine/detectors/: PersistenceDetector.cpp
ThreatDetectionSuite/TDSCommon/: IPSManager.cpp  TDSCommon.h  TDSEvents.h
ThreatDetectionSuite/TDSDriver/: TDSDriver.c  TDSDriver.vcxproj
ThreatDetectionSuite/TDSEngine/: EventBus.h  ForensicManager.h  HeuristicsEngine.cpp  HeuristicsEngine.h  Logger.h  TDSEngine.cpp  TDSEngine.h  TDSService.cpp  ThreatIntelManager.h
ThreatDetectionSuite/TDSEngine/collectors/: EtwCollector.cpp  EtwCollector.h
ThreatDetectionSuite/TDSEngine/correlator/: SequenceCorrelator.cpp  SequenceCorrelator.h
ThreatDetectionSuite/TDSEngine/detectors/: NetworkDetector.cpp  NetworkDetector.h  PersistenceDetector.cpp  PersistenceDetector.h  RegistryDetector.cpp  RegistryDetector.h  SignatureVerifier.h
ThreatDetectionSuite/TDSEngine/ips/: IPSManager.cpp  IPSManager.h
ThreatDetectionSuite/TDSScanner/: Entropy.cpp  Entropy.h  MemoryScanner.cpp  MemoryScanner.h
tools/: attack_sim.cpp  fuzzer.cpp  fuzzer_advanced.cpp  fuzzer_standalone.cpp  ghost_poc.cpp
tools/bridge/: TDSBridge.cpp
tools/soc/: TDSWatcher.ps1  soc_bot.py
